Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,20 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def long_vacation(number_of_days):\n",
     "    if number_of_days > 4:\n",
-    "        return 'that is a long vacation'\n",
-    "    else:\n",
-    "        return 'fuck'"
+    "        return 'that is a long vacation'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +226,7 @@
        "'that is a long vacation'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,9 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fuck'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "long_vacation(3) # None"
    ]
